--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+* {
+  transition: all 0.3s ease;
+}
+
 html,
 body,
 #root {
@@ -5,9 +9,7 @@ body,
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
