feat: implement client side validation for login form

--- a/src/components/inputs/passwordInput/passwordInput.module.scss
+++ b/src/components/inputs/passwordInput/passwordInput.module.scss
@@ -1,15 +1,18 @@
+@import '../defaultInput.module.scss';
+
 .password-input label {
-  left: 30px;
+  left: 10px;
 }
 
 .password-input {
   position: relative;
+  margin-bottom: 25px;
 }
 
 .password-toggle-icon {
   position: absolute;
-  top: 50%;
-  right: 30px;
+  top: 23px;
+  right: 10px;
   transform: translateY(-50%);
   cursor: pointer;
 }
