--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -26,11 +26,11 @@
 }
 
 .registration-link a:hover {
-  color: #2F4DBC;
+  color: #2f4dbc;
 }
 
 .registration-link a:active {
-  color: #1F337E;
+  color: #1f337e;
 }
 
 .form-container {
@@ -64,8 +64,4 @@
 
 .image-container img {
   margin-top: 70px;
-}
-
-.login-form > :not(:last-child) {
-  margin-bottom: 25px;
 }
