--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -2,7 +2,9 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  // min-height: 100%;
+  max-width: 1216px;
+  margin: 0 auto;
 }
 main {
   flex: 1 1 auto;
