--- a/src/index.scss
+++ b/src/index.scss
@@ -5,10 +5,19 @@ body,
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    Ubuntu,
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  font-size: 12px;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
+$border: 1px solid #cfcfcf;
