--- a/src/components/advantages/advantages.module.scss
+++ b/src/components/advantages/advantages.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 60px;
 }
 .textContent {
   h2 {
@@ -17,5 +18,6 @@
   }
 }
 .carts_container {
+  margin-top: 58px;
   display: flex;
 }
