--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,12 +1,20 @@
 @import '../../scss/allVariables.scss';
 
 footer {
+  margin-top: 60px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+
   border-top: 1px solid #cfcfcf;
   background: #f4f4f4;
   padding: 25px 30px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1216px;
+  width: 100%;
 }
 
 .rss_logo {
