--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -3,9 +3,12 @@
   display: flex;
   flex-direction: column;
   // min-height: 100%;
-  max-width: 1216px;
+
   margin: 0 auto;
 }
 main {
+  margin: 0 auto;
+  max-width: 1216px;
   flex: 1 1 auto;
+  width: 100%;
 }
