--- a/src/components/inputs/passwordInput/passwordInput.module.scss
+++ b/src/components/inputs/passwordInput/passwordInput.module.scss
@@ -1,7 +1,9 @@
 @import '../defaultInput.module.scss';
 
-.password-input label {
-  left: 10px;
+.password-input {
+  label {
+    left: 10px;
+  }
 }
 
 .password-input {
@@ -15,4 +17,16 @@
   right: 10px;
   transform: translateY(-50%);
   cursor: pointer;
+}
+
+@media (max-width: 700px) {
+  .password-input {
+    label {
+      left: 2%;
+    }
+  }
+
+  .password-toggle-icon {
+    right: 2%;
+  }
 }
