--- a/src/index.scss
+++ b/src/index.scss
@@ -7,10 +7,15 @@ body,
 #root {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+}
+
+main {
+  margin-bottom: 50px;
 }
