--- a/src/components/checkbox/checkbox.module.scss
+++ b/src/components/checkbox/checkbox.module.scss
@@ -2,11 +2,13 @@
   display: flex;
   align-items: center;
   margin-bottom: 5px;
+  align-items: center;
 }
 
 .checkbox-label {
   font-size: 13px;
   padding-left: 5px;
+  text-align: left;
 }
 
 input[type="checkbox"] {
