--- a/src/pages/registration/registration.module.scss
+++ b/src/pages/registration/registration.module.scss
@@ -1,5 +1,9 @@
 .registration-form {
   padding: 0px 50px 0px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container {
@@ -14,6 +18,7 @@
   margin: 50px 0px 0px;
   font-size: 46px;
   text-transform: uppercase;
+  padding: 0px 30px;
 }
 
 .login-link {
@@ -22,19 +27,21 @@
   margin-bottom: 40px;
 }
 
-.login-link a {
-  margin-left: 10px;
-  color: #2a76f7;
-  font-weight: 500;
-  text-decoration: underline;
-}
+.login-link {
+  a {
+    margin-left: 10px;
+    color: #2a76f7;
+    font-weight: 500;
+    text-decoration: underline;
 
-.login-link a:hover {
-  color: #2f4dbc;
-}
+    &:hover {
+      color: #2f4dbc;
+    }
 
-.login-link a:active {
-  color: #1f337e;
+    &:active {
+      color: #1f337e;
+    }
+  }
 }
 
 .columns-container {
@@ -47,18 +54,12 @@
   width: 100%;
   overflow: hidden;
 }
+
 .form-container {
   position: relative;
   display: flex;
   align-items: center;
   width: 100%;
-}
-
-.registration-form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .form-title {
@@ -78,7 +79,7 @@
 
 .house-number,
 .apartment {
-  width: 149px;
+  width: 95%;
 }
 
 .billing-column {
@@ -86,4 +87,69 @@
   height: 100%;
   border-left: 1px solid #CFCFCF;
   border-right: 1px solid #CFCFCF;
+}
+
+.general-column,
+.billing-column,
+.shipping-column {
+  width: 29%;
+  padding: 0px 20px 20px;
+}
+
+@media (max-width: 820px) {
+  .columns-container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .registration-form {
+    padding: 0px 20px 0px;
+
+    input {
+      width: 100%;
+    }
+
+    input[type=checkbox] {
+      width: 18px;
+    }
+
+    .house-info {
+      display: flex;
+      justify-content: flex-start;
+
+      .house-number {
+        margin-right: 25px;
+        width: 90%;
+      }
+    }
+  }
+
+  .general-column,
+  .billing-column,
+  .shipping-column {
+    width: 100%;
+  }
+
+  .general-column,
+  .billing-column {
+    border-bottom: 1px solid #CFCFCF;
+  }
+
+  .billing-column {
+    height: 100%;
+    border-left: none;
+    border-right: none;
+  }
+}
+
+@media (max-width: 700px) {
+  .page-title {
+    margin: 35px 0px 0px;
+    font-size: calc(10px + 4vmin);
+  }
+
+  .login-link {
+    font-size: calc(10px + 1.5vmin);
+    margin-bottom: 20px;
+  }
 }
