feat: add ability to choose same address for billing and shipping

--- a/src/pages/registration/registration.module.scss
+++ b/src/pages/registration/registration.module.scss
@@ -96,6 +96,13 @@
   padding: 0px 20px 20px;
 }
 
+.disabled-shipping {
+  opacity: 0.5;
+  z-index: -10;
+  position: relative;
+  user-select: none;
+}
+
 @media (max-width: 820px) {
   .columns-container {
     flex-wrap: wrap;
