--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,9 +1,8 @@
 .App {
-  text-align: center;
   display: flex;
   flex-direction: column;
   // min-height: 100%;
-
+  padding: 0 20px;
   margin: 0 auto;
 }
 main {
