--- a/src/components/advantages/carts/carts.module.scss
+++ b/src/components/advantages/carts/carts.module.scss
@@ -2,6 +2,7 @@
 
 .cart {
   display: flex;
+  column-gap: 18px;
 }
 .textContent {
   h5 {
@@ -15,5 +16,12 @@
 @media (max-width: 1220px) {
   .textContent {
     text-align: initial;
+  }
+}
+@media (max-width: 850px) {
+  .cart {
+    img {
+      width: 75px;
+    }
   }
 }
