--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -4,7 +4,6 @@ footer {
   margin-top: 60px;
   display: flex;
   justify-content: center;
-
   border-top: 1px solid #cfcfcf;
   background: #f4f4f4;
   padding: 25px 30px;
@@ -35,4 +34,11 @@ footer {
 
 .gh_logo {
   width: 40px;
+}
+@media (max-width: 500px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 15px;
+  }
 }
