--- a/src/components/inputs/defaultInput.module.scss
+++ b/src/components/inputs/defaultInput.module.scss
@@ -56,6 +56,7 @@
   width: 100%;
   background: white;
   box-sizing: border-box;
+  font-size: 15px;
 }
 
 .error-input {
@@ -77,6 +78,17 @@ input::placeholder {
   line-height: 100%;
 }
 
+select {
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus,
+select:-webkit-autofill:active,
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
