--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,3 +1,5 @@
+// typography
+
 @mixin header($size) {
   font-size: $size;
   font-weight: 700;
@@ -23,4 +25,65 @@
   @include text;
   color: #323032;
   font-size: $size;
+}
+
+// buttons
+
+@mixin button_white {
+  padding: 9px 19px;
+  border-radius: 3px;
+  border: 1px solid #706c68;
+  color: #706c68;
+  background-color: inherit;
+  &:hover {
+    border: 1px solid $light_blue;
+    color: $light_blue;
+  }
+  &:active {
+    border: 1px solid $dark_blue;
+    color: $dark_blue;
+  }
+  &:disabled {
+    border: 1px solid $light_gray;
+    background-color: $light_gray;
+    color: $light_gray;
+  }
+}
+
+@mixin button_blue {
+  padding: 9px 19px;
+  border-radius: 3px;
+  border: none;
+  color: #fff;
+  background-color: $light_blue;
+  &:hover {
+    background-color: $blue;
+  }
+  &:active {
+    background-color: $dark_blue;
+  }
+  &:disabled {
+    background-color: $light_gray;
+    color: $light_gray;
+  }
+}
+
+@mixin button_active {
+  border: 1px solid $dark_blue;
+  color: $dark_blue;
+}
+
+// textcontent
+
+@mixin section_header {
+  h2 {
+    @include header(46px);
+    text-align: center;
+  }
+  p {
+    margin-top: 20px;
+    @include text_transparent(16px);
+    max-width: 732px;
+    text-align: center;
+  }
 }
