--- a/src/components/inputs/selectInput/selectInput.module.scss
+++ b/src/components/inputs/selectInput/selectInput.module.scss
@@ -5,8 +5,21 @@
   margin-bottom: 25px;
 }
 
-.default-input:invalid {
+.default-input {
   color: #cdcccc;
+}
+
+.valid-input {
+  color: black;
+  position: relative;
+  border: 0;
+  border-radius: 5px;
+  outline: 1px solid #cfcfcf;
+  padding: 14px 50px 14px 16px;
+  width: 100%;
+  background: white;
+  box-sizing: border-box;
+  font-size: 15px;
 }
 
 select {
