--- a/src/components/banner/banner.module.scss
+++ b/src/components/banner/banner.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   overflow: visible;
-
+  border-radius: 10px;
   border: $border;
   padding-top: 30px;
   background: url('../../assets/img/svg/banner_bg_circle.svg') no-repeat;
@@ -29,6 +29,7 @@
     align-items: center;
     background-position: 50% 101%;
     background-size: 90%;
+
     h2 {
       max-width: 600px;
     }
