feat: add error display on failed authentication attempt

--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -1,5 +1,5 @@
 .login-form {
-  padding: 0px 50px 0px;
+  padding: 0px 30px 0px;
 
   button {
     margin-top: 0;
@@ -20,6 +20,7 @@
   font-size: 46px;
   text-transform: uppercase;
   padding: 0px 30px;
+  text-align: center;
 }
 
 .registration-link {
@@ -56,6 +57,17 @@
   overflow: hidden;
 }
 
+.form-error {
+  font-size: 14px;
+  text-align: center;
+  color: white;
+  position: absolute;
+  bottom: 20px;
+  padding: 5px;
+  background: red;
+  border-radius: 3px;
+}
+
 .image-container {
   margin-right: 50px;
 
@@ -76,7 +88,7 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 750px) {
   .page-title {
     margin: 35px 0px 0px;
     font-size: calc(10px + 4vmin);
@@ -95,6 +107,8 @@
     width: 90%;
     padding: 40px 0px;
     height: 100%;
+    overflow: visible;
+    margin-top: 20px;
   }
 
   .login-form {
@@ -107,5 +121,11 @@
       width: 100%;
       margin: 0;
     }
+  }
+
+  .form-error {
+    font-size: 11px;
+    bottom:  -60px;
+    margin: 0px 0px;
   }
 }
