--- a/src/pages/registration/registration.module.scss
+++ b/src/pages/registration/registration.module.scss
@@ -20,6 +20,7 @@
   font-size: 46px;
   text-transform: uppercase;
   padding: 0px 30px;
+  text-align: center;
 }
 
 .login-link {
@@ -104,6 +105,49 @@
   user-select: none;
 }
 
+.form-error {
+  font-size: 14px;
+  text-align: center;
+  color: white;
+  position: absolute;
+  bottom: -40px;
+  width: 80%;
+  padding: 5px;
+  background: red;
+  border-radius: 3px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.additional-error-text {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  text-align: center;
+  color: black;
+  position: absolute;
+  bottom: -70px;
+  width: 80%;
+  padding: 5px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  a {
+    margin-left: 10px;
+    color: #2a76f7;
+    font-weight: 500;
+    text-decoration: underline;
+
+    &:hover {
+      color: #2f4dbc;
+    }
+
+    &:active {
+      color: #1f337e;
+    }
+  }
+}
+
 @media (max-width: 820px) {
   .columns-container {
     flex-wrap: wrap;
@@ -159,5 +203,31 @@
   .login-link {
     font-size: calc(10px + 1.5vmin);
     margin-bottom: 20px;
+  }
+
+  .form-container {
+    margin-top: 20px;
+  }
+
+  .form-error {
+    font-size: 11px;
+  }
+
+  .additional-error-text {
+    font-size: 11px;
+    bottom: -86px;
+    flex-direction: column;
+    align-items: center;
+
+    a {
+      margin-left: 10px;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .additional-error-text {
+    font-size: 11px;
+    bottom: -100px;
   }
 }
