--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -40,8 +40,8 @@
     color: $light_blue;
   }
   &:active {
-    border: 1px solid $dark_blue;
-    color: $dark_blue;
+    border: 1px solid $active;
+    color: $active;
   }
   &:disabled {
     border: 1px solid $light_gray;
@@ -60,7 +60,7 @@
     background-color: $blue;
   }
   &:active {
-    background-color: $dark_blue;
+    background-color: $active;
   }
   &:disabled {
     background-color: $light_gray;
@@ -69,8 +69,8 @@
 }
 
 @mixin button_active {
-  border: 1px solid $dark_blue;
-  color: $dark_blue;
+  border: 1px solid $active;
+  color: $active;
 }
 
 // textcontent
