--- a/src/pages/404_notFound/404_notFound.module.scss
+++ b/src/pages/404_notFound/404_notFound.module.scss
@@ -1,11 +1,8 @@
-@import '../../scss/allVariables.scss';
-
 .container {
-  background-color: $gray;
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  padding: 60px 20px 0;
   img {
     width: 80%;
   }
