--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -138,3 +138,32 @@
   padding: 0 5px;
   z-index: 1;
 }
+
+@mixin swiper_button {
+  position: relative;
+  width: 45px !important;
+  background: $footer;
+  outline: 1px solid $defaultOutline;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+  cursor: pointer;
+
+  &::after {
+    top: 0;
+    left: 0;
+    font-size: 16px !important;
+    color: black;
+  }
+
+  &:hover {
+    background: $link;
+
+    &::after {
+      color: white;
+    }
+  }
+
+  &:active {
+    background: $active;
+  }
+}
