--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -88,6 +88,7 @@
 }
 
 .slider {
+  max-width: 75%;
   padding: 0 0 20px 20px;
 
   img {
@@ -115,4 +116,66 @@
   opacity: 0.4;
   text-decoration: line-through;
   margin-bottom: 5px;
+}
+
+
+@media (max-width: 1000px) {
+  .container {
+    margin: 30px 0 60px;
+  }
+
+  .container,
+  .price,
+  .info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .general-info {
+    align-items: center;
+
+    h2 {
+      font-size: calc(10px + 4vmin);
+      text-align: center;
+      margin: 20px 0px 10px;
+      max-width: 75%;
+    }
+  }
+
+  .general {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+  }
+
+  .list-item {
+    justify-content: center;
+  }
+
+  .slider {
+    max-width: 100%;
+    padding: 0 0 20px 0;
+
+    img {
+      border-radius: 5px;
+    }
+  }
+
+  .description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+  .subtitle {
+      text-align: center;
+    }
+
+    p {
+      &:last-child {
+        text-align: center;
+      }
+    }
+  }
 }
