--- a/src/pages/product/modalSlider/modalSlider.module.scss
+++ b/src/pages/product/modalSlider/modalSlider.module.scss
@@ -17,7 +17,6 @@
 
 .modal-content {
   position: relative;
-  max-width: 900px;
 
   img {
     width: 100%;
@@ -37,4 +36,16 @@
   border-radius: 50%;
   padding: 9px 0 4px 16px;
   z-index: 51;
+}
+
+@media (min-width: 1201px) {
+  .modal-content {
+    max-width: 900px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .modal-content {
+    max-width: 70%;
+  }
 }
