--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -62,7 +62,7 @@
 
 .list-item {
   display: flex;
-  align-items: center;
+  width: max-content;
   padding: 5px 0;
 
   p {
@@ -148,6 +148,14 @@
     align-items: center;
     justify-content: center;
     max-width: 100%;
+  }
+
+  .info {
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   .list-item {
