--- a/src/pages/product/modalSlider/modalSlider.module.scss
+++ b/src/pages/product/modalSlider/modalSlider.module.scss
@@ -26,7 +26,7 @@
 .close-button {
   position: absolute;
   top: 2%;
-  right: 2%;
+  right: 1.5%;
   cursor: pointer;
   color: white;
   font-size: 20px;
@@ -36,6 +36,15 @@
   border-radius: 50%;
   padding: 9px 0 4px 16px;
   z-index: 51;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background: $hover;
+  }
+
+  &:active {
+    background: $active;
+  }
 }
 
 @media (min-width: 1201px) {
