--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -95,6 +95,32 @@
   }
 }
 
+@mixin button {
+  font-size: 17px;
+  text-transform: lowercase;
+  width: 320px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background: $link;
+  margin: 25px 0;
+
+  &:hover {
+    cursor: pointer;
+    background: $hover;
+  }
+
+  &:active {
+    background: $active;
+  }
+
+  &:disabled {
+    cursor: default;
+    background: $disabled;
+  }
+}
+
 // text content
 
 @mixin section_header {
