--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -118,6 +118,10 @@
   margin-bottom: 5px;
 }
 
+.button {
+  @include button;
+}
+
 @media (max-width: 1000px) {
   .container {
     margin: 30px 0 60px;
