--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -4,11 +4,13 @@
   padding: 10px;
   display: flex;
   flex-wrap: wrap;
-  column-gap: 16px;
+  row-gap: 16px;
+  flex-direction: column;
 }
 
 .categories {
   display: flex;
+
   justify-content: center;
   background-color: inherit;
   border-radius: 10px;
