--- a/src/pages/catalog/catalog.module.scss
+++ b/src/pages/catalog/catalog.module.scss
@@ -5,3 +5,18 @@
   flex-direction: column;
   align-items: center;
 }
+
+.search_sort {
+  display: flex;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.sideBar {
+  display: flex;
+  flex-direction: column;
+}
