--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -1,4 +1,5 @@
 @import '../../scss/allVariables.scss';
+@import '../../components/button/button.module.scss';
 
 .login-form {
   padding: 0 30px 0;
