--- a/src/pages/registration/registration.module.scss
+++ b/src/pages/registration/registration.module.scss
@@ -1,4 +1,5 @@
 @import '../../scss/allVariables.scss';
+@import '../../components/button/button.module.scss';
 
 .registration-form {
   padding: 0 50px 0;
