--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -32,3 +32,15 @@ a {
 .activeLink {
   color: $link;
 }
+
+.profile {
+  display: flex;
+  flex-direction: row;
+  column-gap: 12px;
+
+  a {
+    display: flex;
+    align-items: center;
+    margin-top: 2px;
+  }
+}
