--- a/src/pages/product/product.module.scss
+++ b/src/pages/product/product.module.scss
@@ -1,6 +1,7 @@
 @import '../../scss/allVariables.scss';
 
 .container {
+  max-width: 90vw;
   margin: 30px 0 160px;
   padding: 30px;
   border-radius: 5px;
@@ -88,6 +89,7 @@
 }
 
 .slider {
+  position: relative;
   max-width: 75%;
   padding: 0 0 20px 20px;
 
@@ -124,6 +126,7 @@
 
 @media (max-width: 1000px) {
   .container {
+    max-width: 74vw;
     margin: 30px 0 60px;
   }
 
