--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -144,6 +144,83 @@
   text-align: center;
 }
 
+// swiper
+
+@mixin swiper_button {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  background: $footer;
+  outline: 1px solid $defaultOutline;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+  cursor: pointer;
+
+  &:hover {
+    background: $link;
+
+    &::after {
+      color: white;
+    }
+  }
+
+  &:active {
+    background: $active;
+  }
+}
+
+@mixin swiper_button_next {
+  @include swiper_button;
+
+  &::after {
+    content: '→';
+    position: absolute;
+    top: 10%;
+    left: 22%;
+    font-size: 28px;
+    color: $link;
+    font-weight: 300;
+  }
+}
+
+@mixin swiper_button_prev {
+  @include swiper_button;
+
+  &::after {
+    content: '←';
+    position: absolute;
+    top: 10%;
+    left: 22%;
+    font-size: 28px;
+    color: $link;
+    font-weight: 300;
+  }
+}
+
+@mixin swiper_navigation($left: 30px, $width: 94.5%) {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  top: 40%;
+  left: $left;
+  width: $width;
+  z-index: 10;
+}
+
+@mixin swiper_pagination($marginBottom: 35px) {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  z-index: 12;
+  margin-bottom: $marginBottom;
+
+  span {
+    width: 16px;
+    height: 16px;
+    background: $link;
+  }
+}
+
 // other
 
 @mixin form_container {
@@ -163,33 +240,4 @@
   background: white;
   padding: 0 5px;
   z-index: 1;
-}
-
-@mixin swiper_button {
-  position: relative;
-  width: 45px !important;
-  background: $footer;
-  outline: 1px solid $defaultOutline;
-  border-radius: 50%;
-  transition: all 0.3s ease;
-  cursor: pointer;
-
-  &::after {
-    top: 0;
-    left: 0;
-    font-size: 16px !important;
-    color: black;
-  }
-
-  &:hover {
-    background: $link;
-
-    &::after {
-      color: white;
-    }
-  }
-
-  &:active {
-    background: $active;
-  }
 }
