--- a/src/components/filterPanel/filterPanel.module.scss
+++ b/src/components/filterPanel/filterPanel.module.scss
@@ -4,6 +4,18 @@
   width: 100%;
 }
 
+.upperPanel {
+  display: flex;
+}
+
+.total {
+  display: flex;
+  flex-wrap: nowrap;
+  font-size: 16px;
+  align-items: center;
+  white-space: pre;
+}
+
 .sides {
   display: flex;
 }
