--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -6,8 +6,9 @@
   padding: 2px 30px;
   border: none;
   background: url('../../assets/img/svg/search_icon.svg') no-repeat 0% 50%;
-
+  width: 100%;
   input {
+    width: 100%;
     border: none;
     margin: 0;
     padding: 7px 8px;
