feat: adding user password change

--- a/src/components/profile/form/form.module.scss
+++ b/src/components/profile/form/form.module.scss
@@ -1,12 +1,22 @@
 @import '../../../scss/allVariables.scss';
 
+.fieldProfile {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .input {
   border: 0;
   outline: none;
   width: 100%;
-  background: white;
   box-sizing: border-box;
   font-size: 15px;
+}
+
+.input:focus {
+  background: $footer;
+  color: $link;
 }
 
 .errors {
@@ -14,6 +24,23 @@
   font-size: 12px;
 }
 
+.warning {
+  color: $warning;
+  font-size: 12px;
+}
+
 .input[type='date'] {
   padding: 0;
+}
+
+.input-Container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 95%;
+}
+
+.password-toggle-icon {
+  margin-top: 5px;
+  cursor: pointer;
 }
