--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -3,14 +3,19 @@
 .container {
   padding: 10px;
   display: flex;
-  flex-wrap: wrap;
-  row-gap: 16px;
   flex-direction: column;
 }
 
 .categories {
   display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  justify-content: center;
+}
 
+.category {
+  display: flex;
+  transition: all 0.3s ease;
   justify-content: center;
   background-color: inherit;
   border-radius: 10px;
