--- a/src/pages/account/account.module.scss
+++ b/src/pages/account/account.module.scss
@@ -39,63 +39,25 @@
   z-index: 1;
 }
 
-.table-container {
-  position: relative;
-  width: 768px;
-  left: 7px;
-  height: 230px;
-  border-radius: 5px;
-  border: 1px solid $defaultOutline;
-  border-collapse: collapse;
-  margin-top: 40px;
-  tbody {
-    :nth-child(1) td {
-      color: $table-title;
-      @include font(14px, 19.6px, 500);
-    }
-    > * {
-      height: 40px;
-    }
-  }
-  td {
-    border-bottom: 1px solid $defaultOutline;
-  }
-  tr span {
-    width: 17px;
-    height: 17px;
-    background-image: url('../../assets/img/svg/edit.svg');
-  }
-  tr:not(:first-child):focus-within {
-    background: $footer;
-    span {
-      width: 40px;
-      height: 40px;
-      background-image: url('../../assets/img/svg/arrow.svg');
-    }
-  }
-}
-
-.table-title {
-  text-align: start;
-}
-
-.table-title-name {
-  text-align: end;
-  padding-right: 20px;
-  color: $title;
-  @include font(14px, 19.6px, 400);
-  border-right: 1px solid $defaultOutline;
-}
-
-.table-input {
-  width: 70%;
-  padding: 0 15px 0 30px;
-  color: $table-title;
-  @include font(14px, 19.6px, 500);
-}
-
 .table-button {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+}
+
+.form-message {
+  margin: auto;
+  font-size: 14px;
+  text-align: center;
+  color: white;
+  width: 80%;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.error {
+  background: red;
+}
+
+.success {
+  background: green;
 }
