feat: implement catalog page

--- a/src/components/productsLayout/productCard/productCard.module.scss
+++ b/src/components/productsLayout/productCard/productCard.module.scss
@@ -27,7 +27,7 @@
   &:hover {
     transform: translateY(-5px);
     border: 1px solid $active;
-    box-shadow: 4px 4px 0px 0px $link;
+    box-shadow: 4px 4px 0px 0px $accent;
   }
 
   .productName {
