--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -54,7 +54,7 @@
     border-radius: 50%;
     width: 592px;
     height: 592px;
-    background: $link;
+    background: $accent;
     top: -110px;
     right: 56%;
     z-index: -1;
