--- a/src/components/filterPanel/filterPanel.module.scss
+++ b/src/components/filterPanel/filterPanel.module.scss
@@ -1,11 +1,25 @@
+@import '../../scss/allVariables.scss';
+
 .container {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
+.header {
+  @include header(46px);
+  margin: 0 auto;
+}
+
+.filterPanel {
+  padding: 5px;
+}
+
 .upperPanel {
   display: flex;
+  border: 1px solid #cfcfcf;
+
+  background: #f4f4f4;
 }
 
 .total {
@@ -14,6 +28,12 @@
   font-size: 16px;
   align-items: center;
   white-space: pre;
+  border-right: 1px solid #cfcfcf;
+
+  padding: 10px;
+  height: 100%;
+  min-width: 300px;
+  width: 300px;
 }
 
 .sides {
@@ -23,5 +43,22 @@
 .sideBar {
   display: flex;
   flex-direction: column;
-  max-width: 30%;
+  min-width: 300px;
+  width: 300px;
+  color: #000;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  row-gap: 30px;
+  border: 1px solid $defaultOutline;
+  background: $footer;
+  padding-left: 20px;
+  height: fit-content;
+  padding: 10px;
+}
+
+.resetButton {
+  @include button_blue;
+  width: 80px;
 }
