--- a/src/components/productsLayout/products.module.scss
+++ b/src/components/productsLayout/products.module.scss
@@ -5,5 +5,8 @@
   flex-wrap: wrap;
   column-gap: 25px;
   row-gap: 30px;
-  min-width: 80%;
+  min-width: 70%;
+  justify-content: center;
+  background-color: #fff;
+  padding-top: 20px;
 }
