--- a/src/components/range-slider/stock/range-slider.module.scss
+++ b/src/components/range-slider/stock/range-slider.module.scss
@@ -1,15 +1,18 @@
+@import '../../../scss/allVariables.scss';
+
 .card {
-  width: 100%;
-  background-color: #fff;
   border-radius: 5px;
-  padding: 20px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 85%;
 }
 
-.price {
+.stock {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 30px;
+  margin: 0 10px;
 }
 
 p {
@@ -38,7 +41,7 @@ input[type='range']::-webkit-slider-thumb {
   height: 15px;
   width: 15px;
   border-radius: 50%;
-  background: #36b37e;
+  background: $hover;
   cursor: pointer;
   margin-top: -5px;
   position: relative;
