--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -7,6 +7,7 @@
   border: none;
   background: url('../../assets/img/svg/search_icon.svg') no-repeat 0% 50%;
   width: 100%;
+
   input {
     width: 100%;
     border: none;
@@ -15,7 +16,7 @@
     font-size: 18px;
     color: #000;
     border-radius: inherit;
-
+    background-color: inherit;
     &:focus-visible,
     &:focus,
     &:hover,
