--- a/src/pages/product/modalSlider/modalSlider.module.scss
+++ b/src/pages/product/modalSlider/modalSlider.module.scss
@@ -32,7 +32,7 @@
   font-size: 20px;
   width: 30px;
   height: 30px;
-  background: $link;
+  background: $accent;
   border-radius: 50%;
   padding: 9px 0 4px 16px;
   z-index: 51;
