--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,7 @@
 $gray: #343234;
 $disabled: #a1a1a1;
 $disabledText: #9e9e9f;
-$link: #3e66fb;
+$accent: #3e66fb;
 $hover: #2f4dbc;
 $active: #1f337e;
 $defaultInput: #cdcccc;
