--- a/src/pages/account/userInfo/userInfo.module.scss
+++ b/src/pages/account/userInfo/userInfo.module.scss
@@ -4,3 +4,11 @@
   display: flex;
   justify-content: center;
 }
+
+.table-adding {
+  display: flex;
+  justify-content: center;
+  color: $defaultLabel;
+  background: $while;
+  cursor: pointer;
+}
